Modification chemin du script

--- a/assets/index.html
+++ b/assets/index.html
@@ -85,7 +85,7 @@
 
     </div>
 
-    <script src="/js/task.js"></script>
+    <script src="js/task.js"></script>
     <script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
     
 </body>
